--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+@import 'grid';
+@import 'header';
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-body{
-  background-color: #c3c3c3;
 }
