--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 @import 'grid';
 @import 'header';
+@import 'main';
 
 *{
   padding: 0;
