--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 .container {
   max-width: 1199px;
@@ -291,6 +292,80 @@
 }
 .main .container .auto__slider .slide .automobile {
   flex-basis: 60%;
+}
+
+.reviews {
+  font-family: Montserrat;
+  width: 100%;
+  padding-top: 100px;
+  padding-bottom: 94px;
+  background-color: #FED100;
+}
+.reviews .container .comment .comment__title {
+  text-align: center;
+  font-size: 30px;
+  padding-bottom: 60px;
+}
+.reviews .container .comment .comment__wrapper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+.reviews .container .comment .comment__wrapper .comment__item {
+  flex-basis: 32%;
+  height: 340px;
+}
+.reviews .container .comment .comment__wrapper .comment__item h5 {
+  font-size: 24px;
+  padding-bottom: 10px;
+}
+.reviews .container .comment .comment__wrapper .comment__item span {
+  position: relative;
+  font-size: 16px;
+}
+.reviews .container .comment .comment__wrapper .comment__item span::before {
+  content: "";
+  position: absolute;
+  right: -20px;
+  top: 0px;
+  background: url(../image/reviews/star.png);
+  width: 15px;
+  height: 15px;
+}
+.reviews .container .comment .comment__wrapper .comment__item p {
+  overflow: hidden;
+  line-height: 21px;
+  max-width: 420px;
+  padding-top: 19px;
+  margin-bottom: 18px;
+  font-size: 16px;
+  max-height: 200px;
+  display: block;
+  display: -webkit-box;
+  -webkit-line-clamp: 8;
+  /* количество строк */
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
+.reviews .container .comment .comment__wrapper .comment__item a {
+  margin-top: 18px;
+  font-size: 16px;
+  color: #333333;
+}
+.reviews .container .comment .comment__btn {
+  padding-top: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.reviews .container .comment .comment__btn a {
+  font-size: 20px;
+  text-decoration: none;
+  padding: 13px 64px;
+  border: 1px solid #333333;
+  color: #333333;
 }
 
 * {
