--- a/styles/style.css
+++ b/styles/style.css
@@ -368,10 +368,210 @@
   color: #333333;
 }
 
+.form {
+  padding: 124px 0px 124px;
+}
+.form .form__wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.form .form__wrapper h3 {
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+.form .form__wrapper span {
+  font-size: 16px;
+}
+.form .form__wrapper form {
+  padding-top: 47px;
+  display: flex;
+  width: 100%;
+}
+.form .form__wrapper form input {
+  font-size: 20px;
+  width: 300px;
+  outline: none;
+  height: 50px;
+  border: none;
+  color: rgba(51, 51, 51, 0.7);
+  border-bottom: 1px solid #333333;
+  margin-right: 72px;
+}
+.form .form__wrapper form .form__cta {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.form .form__wrapper form .form__cta::after {
+  z-index: 2;
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 25px;
+  left: 0px;
+  border: 1px solid #FED100;
+}
+.form .form__wrapper form .form__cta button {
+  z-index: 3;
+  color: #fff;
+  padding: 13px 31px;
+  margin-bottom: 13px;
+  background-color: #FF352B;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.22s ease-in-out;
+}
+.form .form__wrapper form .form__cta button:hover {
+  transform: translate(-10px, -10px);
+}
+.form .form__wrapper form .form__cta .cta__text {
+  display: flex;
+  align-items: center;
+}
+.form .form__wrapper form .form__cta .cta__text input {
+  width: 12px;
+  height: 12px;
+  margin-right: 10px;
+}
+.form .form__wrapper form .form__cta .cta__text p {
+  font-size: 12px;
+}
+
+.map {
+  width: 100%;
+  height: 666px;
+  position: relative;
+}
+.map .map__title {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+}
+.map .map__title h3 {
+  font-size: 30px;
+  padding-bottom: 40px;
+}
+.map .map__title span {
+  font-size: 16px;
+  position: relative;
+  margin-bottom: 20px;
+  color: #333333;
+}
+.map .map__title .title-tel {
+  font-size: 16px;
+  text-decoration: none;
+  position: relative;
+  color: #333333;
+  margin-bottom: 20px;
+}
+.map .map__title .title-email {
+  font-size: 16px;
+  color: #333333;
+  position: relative;
+  margin-bottom: 20px;
+}
+.map .map__title p {
+  text-align: right;
+}
+.map .map__title p i {
+  margin-right: 10px;
+}
+.map .map__title span, .map .map__title .title-tel, .map .map__title .title-email {
+  padding-left: 20px;
+}
+.map .map__title span::after, .map .map__title .title-tel::after, .map .map__title .title-email::after {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  left: 0px;
+  top: 0px;
+  background: url("../image/map/mapCheck.png");
+  background-repeat: no-repeat;
+}
+
+footer {
+  background: #FED100;
+  padding: 100px 0px 100px;
+}
+footer .container .footer-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+footer .container .footer-wrapper .politics {
+  flex-basis: 25%;
+  display: flex;
+  flex-direction: column;
+}
+footer .container .footer-wrapper .politics h3 {
+  font-size: 30px;
+  color: #333333;
+  padding-bottom: 44px;
+}
+footer .container .footer-wrapper .politics a {
+  text-decoration: none;
+  padding-bottom: 36px;
+  color: #333333;
+}
+footer .container .footer-wrapper .pages {
+  flex-basis: 25%;
+  display: flex;
+  flex-direction: column;
+  padding-left: 100px;
+}
+footer .container .footer-wrapper .pages a {
+  color: #333333;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+footer .container .footer-wrapper .social {
+  flex-basis: 25%;
+  display: flex;
+  padding-left: 70px;
+  flex-direction: column;
+}
+footer .container .footer-wrapper .social p {
+  max-width: 160px;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+footer .container .footer-wrapper .social a {
+  font-size: 20px;
+  color: #333333;
+}
+footer .container .footer-wrapper .footer__cta {
+  flex-basis: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer .container .footer-wrapper .footer__cta button {
+  padding: 10px 30px;
+  border: 1px solid #333333;
+  background-color: #FED100;
+  color: #333333;
+  margin-bottom: 10px;
+}
+footer .container .footer-wrapper .footer__cta a {
+  font-size: 20px;
+  color: #333333;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: Montserrat;
 }
 
 /*# sourceMappingURL=style.css.map */
