--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,9 +3,15 @@
 @import 'header';
 @import 'main';
 @import 'reviews';
+@import 'form';
+@import 'map';
+@import 'footer';
 
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+body{
+  font-family: Montserrat;
 }
