Сделан небольшой адаптив

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -177,6 +177,11 @@
           }
           .automobile{
             flex-basis: 60%;
+            display: flex;
+            align-items: center;
+            img{
+              max-width: 100%;
+            }
           }
         }
       }
