--- a/slider/slick/slick-theme.css
+++ b/slider/slick/slick-theme.css
@@ -12,6 +12,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
 /* Arrows */
 .slick-prev {
   position: absolute;
@@ -26,22 +27,25 @@
   background-size: cover;
   top: 50%;
   -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
   padding: 0;
   border: none;
   outline: none;
 }
+
 .slick-prev:hover, .slick-prev:focus {
   outline: none;
   color: transparent;
 }
+
 .slick-prev:hover:before, .slick-prev:focus:before {
   opacity: 1;
 }
+
 .slick-prev.slick-disabled:before {
   opacity: 0.25;
 }
+
 .slick-prev:before {
   font-family: "slick";
   font-size: 20px;
@@ -65,22 +69,25 @@
   background-size: cover;
   top: 50%;
   -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
   padding: 0;
   border: none;
   outline: none;
 }
+
 .slick-next:hover, .slick-next:focus {
   outline: none;
   color: transparent;
 }
+
 .slick-next:hover:before, .slick-next:focus:before {
   opacity: 1;
 }
+
 .slick-next.slick-disabled:before {
   opacity: 0.25;
 }
+
 .slick-next:before {
   font-family: "slick";
   font-size: 20px;
@@ -94,22 +101,26 @@
 .slick-prev {
   left: -50px;
 }
-[dir=rtl] .slick-prev {
+
+[dir="rtl"] .slick-prev {
   left: auto;
   right: -25px;
 }
-[dir=rtl] .slick-prev:before {
+
+[dir="rtl"] .slick-prev:before {
   content: "→";
 }
 
 .slick-next {
   right: -50px;
 }
-[dir=rtl] .slick-next {
+
+[dir="rtl"] .slick-next {
   left: -25px;
   right: auto;
 }
-[dir=rtl] .slick-next:before {
+
+[dir="rtl"] .slick-next:before {
   content: "←";
 }
 
@@ -128,6 +139,7 @@
   margin: 0;
   width: 100%;
 }
+
 .slick-dots li {
   position: relative;
   display: inline-block;
@@ -137,6 +149,7 @@
   padding: 0;
   cursor: pointer;
 }
+
 .slick-dots li button {
   border: 0;
   background: transparent;
@@ -150,12 +163,15 @@
   padding: 5px;
   cursor: pointer;
 }
+
 .slick-dots li button:hover, .slick-dots li button:focus {
   outline: none;
 }
+
 .slick-dots li button:hover:before, .slick-dots li button:focus:before {
   opacity: 1;
 }
+
 .slick-dots li button:before {
   position: absolute;
   top: 0;
@@ -172,9 +188,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .slick-dots li.slick-active button:before {
   color: black;
   opacity: 0.75;
 }
-
 /*# sourceMappingURL=slick-theme.css.map */
