--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -47,6 +47,7 @@
       padding:20px 0px 10px 0px;
       font-size:70px;
       font-weight: bold;
+      
     }
     .title__description{
       font-size:30px;
@@ -61,10 +62,11 @@
       background: #FF352B;
       color:#f2f2f2;
       border:none;
-      -webkit-box-shadow: 8px 8px 0px -5px rgba(255,255,255,1);
-      -moz-box-shadow: 8px 8px 0px -5px rgba(255,255,255,1);
-      box-shadow: 8px 8px 0px -5px rgba(255,255,255,1);
-      // TODO: Сделать бордер для кнопки как на макете
+      transition: transform .22s ease-in-out;
+      cursor: pointer;
+      &:hover{
+        opacity: .9;
+      }
     }
     .advantage{
       max-width: 550px;
@@ -72,6 +74,7 @@
       justify-content: space-between;
       .advantage__item{
         display: flex;
+        z-index: 12;
         align-items: center;
         height: 40px;
         .item__icon{
@@ -104,12 +107,17 @@
     position: absolute;
     bottom:25%;
     right: 10%;
+    @media screen and (max-width: 1199px){
+      right: 5%;
+    }
   }
   .header__man{
     z-index:11;
     position: absolute;
     bottom:0px;
     right: 30%;
+    @media screen and (max-width: 1199px){
+      right:20%;
+    }
   }
 }
-
